--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 			<button class='btn btn-success'>Build</button>
 		</div>
 		<table class="table">
+			<thead>
+				<tr>
+					<th>Hardwares</th>
+				</tr>
+			</thead>
 			<tbody data-bind='foreach: hardwares'>
 				<tr>
 					<td data-bind='text: type'></td>
@@ -30,6 +35,13 @@
 					<td data-bind='text: price'></td>
 				</tr>
 			</tbody>
+			<tfoot>
+				<tr>
+					<td></td>
+					<td>Total Price:</td>
+					<td>1337</td>
+				</tr>
+			</tfoot>
 		</table>
 	</div>
 </body>
