frontend changes on scraper

--- a/Builder/index.html
+++ b/Builder/index.html
@@ -20,7 +20,7 @@
 		<label for='budgetInput'>Budget: </label>
 		<div class='budget-input under-space'>
 			<input class='form-control budget-input' id='budgetInput' data-bind='value: budget' />
-			<button class='btn btn-success'>Build</button>
+			<button class='btn btn-success' data-bind='click: sendBudget'>Build</button>
 		</div>
 		<table class="table">
 			<thead>
